Attempt to fix pipeline error

--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -2,40 +2,32 @@ name: Build all
 
 on:
   push:
-    branches: [ "nonplanar" ]
-  pull_request:
-    branches: [ "nonplanar" ]
-    paths:
-     - 'deps/**'
-     - 'src/**'
-     - '**/CMakeLists.txt'
-     - 'version.inc'
-     - 'localization/**'
-     - 'resources/**'
-     - ".github/workflows/build_*.yml"
-
+    branches: ["nonplanar"]
   pull_request:
     branches:
-     - main
-     - release/*
+      - nonplanar
+      - main
+      - release/*
+      - task/*
     paths:
-     - 'deps/**'
-     - 'src/**'
-     - '**/CMakeLists.txt'
-     - 'version.inc'
-     - ".github/workflows/build_*.yml"
+      - "deps/**"
+      - "src/**"
+      - "**/CMakeLists.txt"
+      - "version.inc"
+      - "localization/**"
+      - "resources/**"
+      - ".github/workflows/build_*.yml"
 
   workflow_dispatch: # allows for manual dispatch
     inputs:
       build-deps-only:
-        description: 'Only build dependencies (bypasses caching)'
+        description: "Only build dependencies (bypasses caching)"
         type: boolean
         default: false
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
-  
 
 jobs:
   build_all:
