--- a/.github/workflows/build_deps.yml
+++ b/.github/workflows/build_deps.yml
@@ -25,8 +25,6 @@ jobs:
     name: Build Deps
     if: inputs.build-deps-only || inputs.valid-cache != true
     runs-on: ${{ inputs.os }}
-    env:
-      date:
     steps:
       # Setup the environment
       - name: Checkout
@@ -59,7 +57,7 @@ jobs:
         run: |
           choco install strawberryperl
           mkdir ${{ github.workspace }}/deps/build
-          mkdir ${{ github.workspace }}/deps/build/OrcaSlicer_dep
+          mkdir ${{ github.workspace }}/deps/build/PruseSlicer_dep
           .\build_release_vs2022.bat deps
           .\build_release_vs2022.bat pack
           cd ${{ github.workspace }}/deps/build
@@ -71,7 +69,7 @@ jobs:
           brew install cmake git gettext automake texinfo
           brew list
           mkdir -p ${{ github.workspace }}/deps/build_${{ inputs.arch }}
-          mkdir -p ${{ github.workspace }}/deps/build_${{ inputs.arch }}/OrcaSlicer_dep_${{ inputs.arch }}
+          mkdir -p ${{ github.workspace }}/deps/build_${{ inputs.arch }}/PruseSlicer_dep_${{ inputs.arch }}
           brew uninstall --ignore-dependencies zstd
           ./build_release_macos.sh -dp -a ${{ inputs.arch }} -t 10.15
           brew install zstd
@@ -92,35 +90,35 @@ jobs:
           sudo chown $USER -R ./
           ./BuildLinux.sh -dr
           cd deps/build
-          tar -czvf OrcaSlicer_dep_ubuntu_$(date +"%Y%m%d").tar.gz destdir
+          tar -czvf PruseSlicer_dep_ubuntu_$(date +"%Y%m%d").tar.gz destdir
 
       # Upload Artifacts
       - name: Upload Mac ${{ inputs.arch }} artifacts
         if: inputs.os == 'macos-12'
         uses: actions/upload-artifact@v3
         with:
-          name: OrcaSlicer_dep_mac_${{ inputs.arch }}_${{ env.date }}
-          path: ${{ github.workspace }}/deps/build_${{ inputs.arch }}/OrcaSlicer_dep*.tar.gz
+          name: PruseSlicer_dep_mac_${{ inputs.arch }}_${{ env.date }}
+          path: ${{ github.workspace }}/deps/build_${{ inputs.arch }}/PruseSlicer_dep*.tar.gz
 
       - name: Upload Windows artifacts
         if: inputs.os == 'windows-latest'
         uses: actions/upload-artifact@v3
         with:
-          name: OrcaSlicer_dep_win64_${{ env.date }}
-          path: ${{ github.workspace }}/deps/build/OrcaSlicer_dep*.zip
+          name: PruseSlicer_dep_win64_${{ env.date }}
+          path: ${{ github.workspace }}/deps/build/PruseSlicer_dep*.zip
 
       - name: Upload Ubuntu artifacts
         if: inputs.os == 'ubuntu-20.04'
         uses: actions/upload-artifact@v3
         with:
-          name: OrcaSlicer_dep_ubuntu_${{ env.date }}
-          path: ${{ github.workspace }}/deps/build/OrcaSlicer_dep_ubuntu_*.tar.gz
+          name: PruseSlicer_dep_ubuntu_${{ env.date }}
+          path: ${{ github.workspace }}/deps/build/PruseSlicer_dep_ubuntu_*.tar.gz
 
-  build_orca:
-    name: Build OrcaSlicer
+  build_prusa:
+    name: Build PruseSlicer
     needs: [build_deps]
     if: ${{ !cancelled() && !inputs.build-deps-only && (inputs.valid-cache == true && needs.build_deps.result == 'skipped') || (inputs.valid-cache != true && success()) }}
-    uses: ./.github/workflows/build_orca.yml
+    uses: ./.github/workflows/build_prusa.yml
     with:
       cache-key: ${{ inputs.cache-key }}
       cache-path: ${{ inputs.cache-path }}
