--- a/.github/workflows/build_deps.yml
+++ b/.github/workflows/build_deps.yml
@@ -57,7 +57,7 @@ jobs:
         run: |
           choco install strawberryperl
           mkdir ${{ github.workspace }}/deps/build
-          mkdir ${{ github.workspace }}/deps/build/PruseSlicer_dep
+          mkdir ${{ github.workspace }}/deps/build/PrusaSlicer_dep
           .\build_release_vs2022.bat deps
           .\build_release_vs2022.bat pack
           cd ${{ github.workspace }}/deps/build
@@ -69,7 +69,7 @@ jobs:
           brew install cmake git gettext automake texinfo
           brew list
           mkdir -p ${{ github.workspace }}/deps/build_${{ inputs.arch }}
-          mkdir -p ${{ github.workspace }}/deps/build_${{ inputs.arch }}/PruseSlicer_dep_${{ inputs.arch }}
+          mkdir -p ${{ github.workspace }}/deps/build_${{ inputs.arch }}/PrusaSlicer_dep_${{ inputs.arch }}
           brew uninstall --ignore-dependencies zstd
           ./build_release_macos.sh -dp -a ${{ inputs.arch }} -t 10.15
           brew install zstd
@@ -90,32 +90,32 @@ jobs:
           sudo chown $USER -R ./
           ./BuildLinux.sh -dr
           cd deps/build
-          tar -czvf PruseSlicer_dep_ubuntu_$(date +"%Y%m%d").tar.gz destdir
+          tar -czvf PrusaSlicer_dep_ubuntu_$(date +"%Y%m%d").tar.gz destdir
 
       # Upload Artifacts
       - name: Upload Mac ${{ inputs.arch }} artifacts
         if: inputs.os == 'macos-12'
         uses: actions/upload-artifact@v3
         with:
-          name: PruseSlicer_dep_mac_${{ inputs.arch }}_${{ env.date }}
-          path: ${{ github.workspace }}/deps/build_${{ inputs.arch }}/PruseSlicer_dep*.tar.gz
+          name: PrusaSlicer_dep_mac_${{ inputs.arch }}_${{ env.date }}
+          path: ${{ github.workspace }}/deps/build_${{ inputs.arch }}/PrusaSlicer_dep*.tar.gz
 
       - name: Upload Windows artifacts
         if: inputs.os == 'windows-latest'
         uses: actions/upload-artifact@v3
         with:
-          name: PruseSlicer_dep_win64_${{ env.date }}
-          path: ${{ github.workspace }}/deps/build/PruseSlicer_dep*.zip
+          name: PrusaSlicer_dep_win64_${{ env.date }}
+          path: ${{ github.workspace }}/deps/build/PrusaSlicer_dep*.zip
 
       - name: Upload Ubuntu artifacts
         if: inputs.os == 'ubuntu-20.04'
         uses: actions/upload-artifact@v3
         with:
-          name: PruseSlicer_dep_ubuntu_${{ env.date }}
-          path: ${{ github.workspace }}/deps/build/PruseSlicer_dep_ubuntu_*.tar.gz
+          name: PrusaSlicer_dep_ubuntu_${{ env.date }}
+          path: ${{ github.workspace }}/deps/build/PrusaSlicer_dep_ubuntu_*.tar.gz
 
   build_prusa:
-    name: Build PruseSlicer
+    name: Build PrusaSlicer
     needs: [build_deps]
     if: ${{ !cancelled() && !inputs.build-deps-only && (inputs.valid-cache == true && needs.build_deps.result == 'skipped') || (inputs.valid-cache != true && success()) }}
     uses: ./.github/workflows/build_prusa.yml
