--- a/.github/workflows/build_prusa.yml
+++ b/.github/workflows/build_prusa.yml
@@ -18,6 +18,10 @@ jobs:
   build_prusa:
     name: Build PrusaSlicer
     runs-on: ${{ inputs.os }}
+    env:
+      date: ""
+      ver: ""
+      ver_pure: ""
 
     steps:
       - name: Checkout
@@ -33,7 +37,7 @@ jobs:
       - name: Get the version and date on Ubuntu and macOS
         if: inputs.os != 'windows-latest'
         run: |
-          ver_pure=$(grep 'set(SoftFever_VERSION' version.inc | cut -d '"' -f2)
+          ver_pure=$(grep 'set(Project_VERSION' version.inc | cut -d '"' -f2)
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
             ver="PR-${{ github.event.number }}"
           else
@@ -56,7 +60,7 @@ jobs:
               $ver = "PR" + $prNumber
           } else {
               $versionContent = Get-Content version.inc -Raw
-              if ($versionContent -match 'set\(SoftFever_VERSION "(.*?)"\)') {
+              if ($versionContent -match 'set\(Project_VERSION "(.*?)"\)') {
                   $ver = $matches[1]
               }
               $ver = "V$ver"
@@ -128,7 +132,7 @@ jobs:
         if: github.ref == 'refs/heads/main' && inputs.os == 'macos-12'
         uses: WebFreak001/deploy-nightly@v3.0.0
         with:
-          upload_url: https://uploads.github.com/repos/SoftFever/PrusaSlicer/releases/137995723/assets{?name,label}
+          upload_url: https://uploads.github.com/repos/Fox-Islam/PrusaSlicer/releases/137995723/assets{?name,label}
           release_id: 137995723
           asset_path: ${{ github.workspace }}/PrusaSlicer_Mac_${{inputs.arch}}_${{ env.ver }}.dmg
           asset_name: PrusaSlicer_Mac_${{inputs.arch}}_${{ env.ver }}.dmg
@@ -194,7 +198,7 @@ jobs:
         if: github.ref == 'refs/heads/main' && inputs.os == 'windows-latest'
         uses: WebFreak001/deploy-nightly@v3.0.0
         with:
-          upload_url: https://uploads.github.com/repos/SoftFever/PrusaSlicer/releases/137995723/assets{?name,label}
+          upload_url: https://uploads.github.com/repos/Fox-Islam/PrusaSlicer/releases/137995723/assets{?name,label}
           release_id: 137995723
           asset_path: ${{ github.workspace }}/build/PrusaSlicer_Windows_${{ env.ver }}_portable.zip
           asset_name: PrusaSlicer_Windows_${{ env.ver }}_portable.zip
@@ -205,7 +209,7 @@ jobs:
         if: github.ref == 'refs/heads/main' && inputs.os == 'windows-latest'
         uses: WebFreak001/deploy-nightly@v3.0.0
         with:
-          upload_url: https://uploads.github.com/repos/SoftFever/PrusaSlicer/releases/137995723/assets{?name,label}
+          upload_url: https://uploads.github.com/repos/Fox-Islam/PrusaSlicer/releases/137995723/assets{?name,label}
           release_id: 137995723
           asset_path: ${{ github.workspace }}/build/PrusaSlicer_Windows_Installer_${{ env.ver }}.exe
           asset_name: PrusaSlicer_Windows_Installer_${{ env.ver }}.exe
@@ -252,7 +256,7 @@ jobs:
         if: github.ref == 'refs/heads/main' && inputs.os == 'ubuntu-20.04'
         uses: WebFreak001/deploy-nightly@v3.0.0
         with:
-          upload_url: https://uploads.github.com/repos/SoftFever/PrusaSlicer/releases/137995723/assets{?name,label}
+          upload_url: https://uploads.github.com/repos/Fox-Islam/PrusaSlicer/releases/137995723/assets{?name,label}
           release_id: 137995723
           asset_path: ./build/PrusaSlicer_Linux_${{ env.ver }}.AppImage
           asset_name: PrusaSlicer_Linux_${{ env.ver }}.AppImage
